--- a/src/boletin_calculadora/Calculadora.form
+++ b/src/boletin_calculadora/Calculadora.form
@@ -115,7 +115,6 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="78" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -137,11 +136,13 @@
                               <Component id="bMultiplicar" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="bUno" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="bDos" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="bTres" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="bRestar" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="bDos" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="bTres" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="bRestar" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
